Returned normal svg copy

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -103,7 +103,7 @@ button {
         color: $color-link;
     }
 
-    // .main-nav__phone
+    .main-nav__phone
     &__phone {
         padding-left: 3px;
         height: 300px!important;
