Aded body scroll lock when menu is opened

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -16,7 +16,6 @@ html {
 }
 
 * {
-    border: 1px solid red;
     box-sizing: border-box;
     transition: .25s ease-in-out;
 }
@@ -42,183 +41,7 @@ button {
     border: none;
 }
 
-//Header styles
-.header {
-    position: fixed;
-    padding: 10px 28px;
-    width: 100%;
-    // .header__logo
-    &__logo {
-        width: 62px;
-        height: 46px;
-        z-index: 2;
-    }
+body.scroll-lock {
+    overflow-y: hidden;
 }
 
-//Header menu
-.menu {
-    // .menu__btn
-    &__btn {
-        position: absolute;
-        right: 28px;
-        top: 20px;
-    }
-
-    //list and buttons wrapper
-    &__items {
-        position: absolute;
-        display: none;
-        opacity: 0;
-        flex-direction: column;
-        justify-content: space-around;
-        top: 66px;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        padding: 30px;
-    }
-
-    // .menu__list
-    &__list {
-        @include reset-list();
-        text-align: center;
-    }
-
-    // .menu__item
-    &__item {
-        margin-bottom: 35px;
-    }
-
-    // .menu__link
-    &__link {
-        font-size: 36px;
-        letter-spacing: 0.54px;
-        line-height: 27px;
-        color: $color-link;
-    }
-
-    // .menu__buttons
-    &__buttons {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    // .menu__phone
-    &__phone {
-        padding-left: 30px;
-        max-width: 185px;
-        background: url("../static/images/icons/phone.svg") no-repeat left center;
-        font-size: 18px;
-        font-weight: 400;
-        letter-spacing: 0.99px;
-        color: $color-link;
-    }
-
-    // .menu__subtitle
-    &__subtitle {
-        margin-left: 7px;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 27px;
-        color: $color-text;
-    }
-
-    // .menu__button
-    &__button {}
-
-    // .menu__lang
-    &__lang {
-        font-size: 18px;
-        font-weight: 400;
-        letter-spacing: 0.63px;
-        line-height: 27px;
-        color: $color-text;
-    }
-
-    // .menu__cart
-    &__cart {}
-
-    // .menu__goods-count
-    &__goods-count {
-        background: url(../static/images/icons/bag.svg) no-repeat center center;
-        display: inline-block;
-        padding: 10px 5px 5px 5px;
-        font-size: 12px;
-        font-weight: 300;
-        color: $color-body;
-    }
-
-    // .menu__goods-cost
-    &__goods-cost {
-        margin-left: 10px;
-        font-size: 17px;
-        font-weight: 400;
-        letter-spacing: 0.26px;
-        line-height: 27px;
-        color: $color-link;
-    }
-
-    //Menu opened state
-    &.menu-opened {
-        //Button
-        .btn {
-            .btn__line {
-                &:first-child {
-                    top: 10px;
-                    transform: rotate(45deg);
-                }
-
-                &:nth-child(2) {
-                    transform: rotate(-45deg);
-                }
-
-                &:last-child {
-                    opacity: 0;
-                }
-            }
-        }
-        //Links and buttons
-        .menu__items {
-            display: flex;
-            &.visible {
-                opacity: 1;
-            }
-        }
-    }
-}
-
-//Menu button
-.btn {
-    width: 46px;
-    height: 25px;
-    background: transparent;
-    // .btn__line
-    &__line {
-        position: absolute;
-        right: 0;
-        display: block;
-        width: 100%;
-        height: 5px;
-        border-radius: 5px;
-        background: $color-link;
-        &:first-child {
-            top: 0;
-        }
-
-        &:nth-child(2) {
-            top: 10px;
-        }
-
-        &:last-child {
-            top: 20px;
-            width: 30px;
-        }
-    }
-}
-
-
-.main {
-    height: 30000px;
-}
