Aded first screen block layout and styles

--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -5,6 +5,7 @@
 //Header styles
 .header {
     position: fixed;
+    top: 0;
     padding: 12px 28px;
     width: 100%;
     background-color: $color-body;
