--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,16 @@
+//Utilites
 @import 'utils/mixins';
 @import 'utils/vars';
 @import '~rfs/scss';
+
+//Header styles
 @import 'header/header.scss';
 @import 'header/menu.scss';
 @import 'header/menu-button.scss';
+
+//Main styles
+@import 'main/main.scss';
+@import 'main/first-screen.scss';
 
 @font-face {
     font-family: SegoeUI;
@@ -14,6 +21,7 @@
     font-weight: 400;
 }
 
+//Normalize
 html {
     font-size: 16px;
 }
@@ -30,6 +38,23 @@ li a {
 
 a {
     text-decoration: none;
+    font-family: "Segoe UI";
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+h1 {
+    font-family: Poppins;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     font-family: "Segoe UI";
 }
 
