--- a/src/styles/main/first-screen.scss
+++ b/src/styles/main/first-screen.scss
@@ -7,6 +7,7 @@
     color: $color-body;
     background: url(../static/images/first-screen/first-screen-mobile.jpg) no-repeat center;
     background-size: cover;
+
     &__title {
         font-size: 56px;
         font-weight: 600;
@@ -14,6 +15,7 @@
         font-family: Poppins;
         max-width: 580px;
     }
+
     &__subtitle {
         margin-top: 20px;
         font-size: 24px;
@@ -27,6 +29,7 @@
     .welcome {
         background: url(../static/images/first-screen/first-screen-tablet.jpg) no-repeat center;
         background-size: cover;
+        padding-left: 2%;
     }
 }
 
@@ -36,9 +39,11 @@
         background-size: cover;
         min-height: 600px;
         padding-left: 5%;
+
         &__title {
             font-size: 64px;
         }
+
         &__subtitle {
             font-size: 28px;
         }
@@ -48,13 +53,13 @@
 @media (min-width: 1300px) {
     .welcome {
         padding-left: 10%;
-        max-height: 650px;
+        min-height: 650px;
     }
 }
 
 @media (min-width: 1700px) {
     .welcome {
         padding-left: 16%;
-        max-height: 720px;
+        min-height: 720px;
     }
 }
