--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,3 +1,13 @@
+//Main content
 .main {
     margin-top: 73px;
 }
+
+@media (min-width: 1425px) {
+    .main {
+        margin-top: 110px;
+    }
+}
+
+//Content after first screen 
+.content-wrapper {}
