--- a/src/styles/main/products.scss
+++ b/src/styles/main/products.scss
@@ -22,7 +22,6 @@
 
     // .product__title
     &__title {
-        margin-bottom: 15px;
         font-size: 36px;
         font-weight: 600;
         line-height: 30px;
@@ -36,6 +35,7 @@
         font-weight: 500;
         line-height: 25px;
         color: $color-title;
+        margin: 15px 0;
     }
 
     // .product__list
@@ -57,14 +57,7 @@
     // .product__button
     &__link {
         display: inline-block;
-        padding: 18px 54px 18px 30px;
         margin: 15px 0 25px 0;
-        border-radius: 4px;
-        background: url(../static/images/icons/arrow.svg) $color-accent no-repeat calc(100% - 30px) center;
-        font-size: 16px;
-        font-weight: 600;
-        letter-spacing: 0.24px;
-        color: $color-body;
     }
 
     // .product__img
@@ -112,6 +105,10 @@
             max-width: 60%;
         }
 
+        &__subtitle {
+            margin: 45px 0;
+        }
+
         &--reversed {
             flex-direction: row-reverse;
 
@@ -146,8 +143,25 @@
         margin-top: 130px;
 
         &__text-wrapper {
+            padding: 30px 0 0 50px;
             max-width: 630px;
             margin: 0 0 0 10%;
+        }
+
+        &__title {
+            font-size: 46px;
+        }
+
+        &__subtitle {
+            font-size: 20px;
+        }
+
+        &__list-item {
+            font-size: 20px;
+        }
+
+        &__link {
+            margin-top: 110px;
         }
 
         //New background image
