--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,3 +1,5 @@
+@import 'vars';
+
 //reset list (remove margin, padding and list styles)
 @mixin reset-list {
   margin: 0;
@@ -7,15 +9,17 @@
 
 //reset elem (remove margin and padding)
 @mixin reset {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 //make a horisontal list 
 @mixin horizontal-list {
   @include reset-list;
+
   li {
     display: inline-block;
+
     margin: {
       left: -2px;
       right: 2em;
@@ -23,3 +27,8 @@
   }
 }
 
+//Adaptive fontsize
+@mixin font-size($sizeValue: 1.6) {
+  font-size: ($sizeValue * 10) + px;
+  font-size: $sizeValue + rem;
+}
