--- a/src/styles/main/main-link.scss
+++ b/src/styles/main/main-link.scss
@@ -1,7 +1,7 @@
 .content-link {
     padding: 18px 54px 18px 30px;
     border-radius: 4px;
-    background: url(../static/images/icons/arrow.svg) $color-accent no-repeat calc(100% - 30px) center;
+    background: url(../static/images/icons/arrow.png) $color-accent no-repeat calc(100% - 30px) center;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 0.24px;
