--- a/src/styles/main/secondary-title.scss
+++ b/src/styles/main/secondary-title.scss
@@ -1,7 +1,8 @@
 //First screen, how-we, contacts block title
 .secondary-title {
-    font-size: 42px;
+    font-family: 'Poppins',
+        sans-serif;
     font-weight: 400;
-    line-height: 50px;
     color: $color-body;
 }
+
