--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -11,6 +11,11 @@
     width: 100%;
     background-color: $color-body;
 
+    //on scroll start
+    &-scroll {
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+    }
+
     // .header__logo
     &__logo {
         width: 62px;
