--- a/src/styles/main/first-screen.scss
+++ b/src/styles/main/first-screen.scss
@@ -1,4 +1,5 @@
 .welcome {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,6 +8,24 @@
     color: $color-body;
     background: url(../static/images/first-screen/first-screen-mobile.jpg) no-repeat center;
     background-size: cover;
+
+    //Bg eclipce
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.31);
+        z-index: 2;
+    }
+
+    //All elements to the fore
+    * {
+        position: relative;
+        z-index: 3;
+    }
 
     &__title {
         font-size: 56px;
