--- a/src/styles/main/how-we.scss
+++ b/src/styles/main/how-we.scss
@@ -1,4 +1,5 @@
 .how-we {
+    position: relative;
     margin-top: 50px;
     padding: 0 15px;
     display: flex;
@@ -10,6 +11,24 @@
     background: url(../static/images/question/how-bg-mobile.jpg) no-repeat center;
     background-size: cover;
 
+    //Bg eclipce
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.31);
+        z-index: 2;
+    }
+
+    //All elements to the fore
+    * {
+        position: relative;
+        z-index: 3;
+    }
+
     // .how-we__title
     &__title {
         font-size: 30px;
@@ -20,6 +39,7 @@
 
     // .how-we__text
     &__text {
+
         margin: 40px 0 45px 0;
         font-size: 22px;
         font-weight: 400;
@@ -42,5 +62,13 @@
     @media (min-width: 1000px) {
         background: url(../static/images/question/how-bg.jpg) no-repeat center;
         background-size: cover;
+
+        &__title {
+            font-size: 42px;
+        }
+
+        &__text {
+            max-width: 760px;
+        }
     }
 }
