--- a/src/styles/main/reviews.scss
+++ b/src/styles/main/reviews.scss
@@ -9,7 +9,7 @@
   &__title {
     margin-right: 50px;
     margin-bottom: 20px;
-    font-size: 42px;
+    font-size: 36px;
   }
 
   // .reviews__reviews-wrapper
@@ -21,8 +21,7 @@
   }
 
   // .reviews__card
-  &__card {
-  }
+  &__card {}
 
   // .reviews__link
   &__link {
@@ -33,13 +32,13 @@
     margin: 145px 0 175px 0;
 
     &__title {
+      font-size: 42px;
       margin-bottom: 60px;
     }
   }
 }
 
-.review {
-}
+.review {}
 
 .card {
   display: flex;
