--- a/src/styles/main/how-we.scss
+++ b/src/styles/main/how-we.scss
@@ -62,6 +62,8 @@
     @media (min-width: 1000px) {
         background: url(../static/images/question/how-bg.jpg) no-repeat center;
         background-size: cover;
+        margin: 130px 5.26%;
+
 
         &__title {
             font-size: 42px;
